# euporie

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONVENTIONS.rst  Containerfile  Dockerfile  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.rst  requirements.txt
docs/_extensions/: video.py
docs/_inc/: cli_flags.rst  configuration_options.rst  default_key_bindings.rst
docs/_static/: custom.css  lite.html
docs/_templates/: layout.html
docs/apps/: console.rst  console_commands.rst  hub.rst  hub_commands.rst  notebook.rst  notebook_commands.rst  preview.rst  preview_commands.rst
docs/pages/: cli.rst  configuration.rst  edit.rst  gallery.rst  hub.rst  installation.rst  keybindings.rst  overview.rst  preview.rst  related.rst  troubleshooting.rst  usage.rst
docs/reference/: euporie.app.base.Application.rst  euporie.app.base.BaseStyle.rst  euporie.app.base.ChainedList.rst  euporie.app.base.ColorDepth.rst  euporie.app.base.ColorPalette.rst  euporie.app.base.ConditionalKeyBindings.rst  euporie.app.base.ConditionalStyleTransformation.rst  euporie.app.base.DummyStyle.rst  euporie.app.base.EditingMode.rst  euporie.app.base.EuporieApp.rst  euporie.app.base.FloatContainer.rst  euporie.app.base.KeyProcessor.rst  euporie.app.base.Layout.rst  euporie.app.base.MicroState.rst  euporie.app.base.Notebook.rst  euporie.app.base.Path.rst  euporie.app.base.SetDefaultColorStyleTransformation.rst  euporie.app.base.Style.rst  euporie.app.base.SwapLightAndDarkStyleTransformation.rst  euporie.app.base.Tab.rst  euporie.app.base.TabMode.rst  euporie.app.base.TerminalInfo.rst  euporie.app.base.Vt100Parser.rst  euporie.app.base.WeakSet.rst  euporie.app.base.Window.rst  euporie.app.base.build_style.rst  euporie.app.base.cast.rst  euporie.app.base.create_app_session.rst  euporie.app.base.create_input.rst  euporie.app.base.create_output.rst  euporie.app.base.get_style_by_name.rst  euporie.app.base.load_basic_bindings.rst  euporie.app.base.load_command_bindings.rst  euporie.app.base.load_cpr_bindings.rst  euporie.app.base.load_emacs_bindings.rst  euporie.app.base.load_emacs_search_bindings.rst  euporie.app.base.load_emacs_shift_selection_bindings.rst  euporie.app.base.load_micro_bindings.rst  euporie.app.base.load_mouse_bindings.rst  euporie.app.base.load_vi_bindings.rst  (+2765 more)
euporie/: __init__.py  __main__.py  ansi.py  app.py  border.py  box.py  cell.py  completion.py  config.py  containers.py  control.py  dialog.py  enums.py  filters.py  format.py  image.py  kernel.py  kernel_.py  keys.py  log.py  main.py  margins.py  mdtable.py  menu.py  notebook.py  output.py  palette.py  reference.py  render.py  renderer.py  scroll.py  style.py  suggest.py  tab.py  term.py  terminal.py  text.py  url.py  utils.py
euporie/app/: __init__.py  base.py  console.py  contents.py  current.py  dialog.py  dump.py  edit.py  hub.py  interface.py  preview.py  term.py  tui.py
euporie/apptk/: __init__.py  auto_suggest.py  border.py  cache.py  color.py  commands.py  css.py  data_structures.py  diagnostics.py  enums.py  io.py  keys.py  logging.py  mouse_events.py  path.py  renderer.py
euporie/comm/: __init__.py  base.py  ipywidgets.py  registry.py
euporie/commands/: __init__.py  app.py  base.py  buffer.py  cell.py  cell_output.py  command.py  completions.py  config.py  format.py  notebook.py  pager.py  registry.py  search.py  suggestions.py  tui.py
euporie/components/: __init__.py
euporie/console/: __init__.py  _commands.py  _settings.py  app.py
euporie/convert/: __init__.py  base.py  util.py
euporie/core/: __init__.py  __main__.py  _settings.py  app.py  async_utils.py  border.py  cache.py  clipboard.py  commands.py  completion.py  config.py  css.py  current.py  data_structures.py  diagnostics.py  filters.py  format.py  fsspec.py  graphics.py  history.py  inspection.py  io.py  kernel.py  keys.py  launch.py  lexers.py  log.py  lsp.py  margins.py  mouse_events.py  nbformat.py  path.py  processors.py  pygments.py  reference.py  renderer.py  style.py  suggest.py  terminal.py  url.py  (+2 more)
euporie/edit/: __init__.py  app.py
euporie/formatted_text/: ansi.py  markdown.py  markdown_enhanced.py  properties.py  table.py  util.py  utils.py
euporie/graphics/: __init__.py  base.py  kitty.py  sixel.py
euporie/hub/: __init__.py  __main__.py  app.py  hub.py
euporie/key_binding/: __init__.py  load.py  micro_state.py  util.py
euporie/libs/: __init__.py
euporie/markdown/: __init__.py  parser.py  rich.py
euporie/menu/: __init__.py  bar.py  contents.py  item.py
euporie/notebook/: __init__.py  __main__.py  _commands.py  _settings.py  app.py  current.py  enums.py  filters.py  tips.py
euporie/output/: __init__.py  container.py  control.py
scripts/: __init__.py  clone_helix_lsp_config.py  debug_vt100_input.py  document_cli.py  document_cli_flags.py  document_commands.py  document_config_options.py  document_configuration_options.py  document_default_key_bindings.py  document_key_bindings.py  document_usage.py  extract_changelog_github.py  generate_more_keys.py  key_bindings_to_markdown.py  key_bindings_to_rst.py  pre_commit_patch.py  publish.py  run_notebook.py  run_preview.py  show.py
tests/: __init__.py  test_async_utils.py  test_convert_formats_markdown.py  test_core_comm_base.py  test_core_comm_ipywidgets.py  test_core_comm_registry.py  test_core_commands.py  test_core_completions.py  test_core_convert_core.py  test_core_convert_datum.py  test_core_convert_formats_markdown.py  test_core_convert_mime.py  test_core_convert_utils.py  test_core_current.py  test_core_data_structures.py  test_core_filters.py  test_core_formatted_text_ansi.py  test_core_formatted_text_html.py  test_core_ft_ansi.py  test_core_ft_html.py  test_core_ft_utils.py  test_core_key_binding_micro.py  test_core_layout_containers.py  test_core_lexers.py  test_core_path.py  test_core_pygments.py  test_core_style.py  test_core_utils.py  test_core_validation.py  test_euporie.py  test_formatted_text_html.py  test_redspot.py  test_url.py
(+297 files in other folders)
